--- a/BackendAwsDeployeDemo/pom.xml
+++ b/BackendAwsDeployeDemo/pom.xml
@@ -42,7 +42,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-		<finalName>githubactionsawsdeploy</finalName>
+		<finalName>demo</finalName>
 	</build>
 
 </project>
