--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,5 +28,8 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn BackendAwsDeployeDemo/pom.xml clean install
+      run: |
+       cd BackendAwsDeployeDemo
+       mvn clean install
+
 
