--- a/BackendAwsDeployeDemo/Dockerfile
+++ b/BackendAwsDeployeDemo/Dockerfile
@@ -2,5 +2,5 @@ FROM openjdk:17
 EXPOSE 8080
 
 
-COPY BackendAwsDeployeDemo/target/githubactionsawsdeploy.jar /githubactionsawsdeploy.jar
-ENTRYPOINT ["java", "-jar", "/githubactionsawsdeploy.jar"]
+COPY BackendAwsDeployeDemo/target/demo.jar /demo.jar
+ENTRYPOINT ["java", "-jar", "/demo.jar"]
