--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -48,7 +48,7 @@ jobs:
 
   deploy:
     needs: build
-    runs-on: [gitactions]
+    runs-on: [demorunner]
     steps:
       - name: Install Docker
         run: |
