--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -52,14 +52,14 @@ jobs:
     steps:
       - name: Install Docker
         run: |
-          sudo apt-get update
-          sudo apt-get -y install docker.io
+          apt-get update
+          apt-get -y install docker.io
   
       - name: delete old container
-        run: sudo docker rm -f demogitactionsdeploy-container
+        run: docker rm -f demogitactionsdeploy-container
 
      
       - name: run Docker container
-        run: sudo docker run -d -p 8080:8080 --name demogitactionsdeploy-container thirumaleshd7013/awsdockerimage:${{ github.sha }}
+        run: docker run -d -p 8080:8080 --name demogitactionsdeploy-container thirumaleshd7013/awsdockerimage:${{ github.sha }}
 
 
