--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -51,7 +51,7 @@ jobs:
     runs-on: [demorunner]
     steps:
       - name: run docker
-        run: service docker start
+        run: docker start
   
       - name: delete old container
         run: docker rm -f demogitactionsdeploy-container || true
